--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -19,6 +19,17 @@
   text-decoration: none
   outline: none
 
+  header &
+    height: H = 32px
+    line-height: H
+    padding: 0 8px
+    & > .icon
+      font-size: 1.3em
+      float: left
+    & .icon + abbr
+      margin-left: 6px
+      float: right
+
   article &
     height: H = 40px
     line-height: (H - 2)
