--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -25,6 +25,7 @@
     padding: 0 8px
     & > .icon
       font-size: 1.3em
+      display: block
       float: left
     & .icon + abbr
       margin-left: 4px
