--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -251,8 +251,7 @@ header
 
 article
   & .button, button
-    border-radius(FORM-border-radius)
-    color: #fff
+    color: #fff !important
     border-radius 2px
     box-shadow inset 0 1px 0 rgba(255,255,255,0.2)
     border: solid 1px rgba(0,0,0,0.1)
