--- a/src/stylesheets/constants.styl
+++ b/src/stylesheets/constants.styl
@@ -16,3 +16,8 @@ FONT_SIZE_BIG          = 1.2em
 
 LIST_PADDING           = 14px
 LIST_PADDING_HORIZONTAL= (LIST_PADDING / 1.25)
+
+INDENT                 = 3%
+
+FORM_HEIGHT = 30px
+FORM_PROGRESS_HEIGHT = (FORM_HEIGHT / 2)
