--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -14,7 +14,7 @@
   border: none
   cursor: pointer
   font-family: inherit
-  font-size: 1.15em
+  font-size: FONT_SIZE_BIG
   text-align: center
   text-decoration: none
   outline: none
@@ -54,7 +54,7 @@
     &.large
       height: H = 52px
       padding: 0 20px
-      font-size: 1.4em
+      font-size: FONT_SIZE_LARGE
       line-height: (H - 2)
       & .icon + abbr
         margin-left: 10px
