--- a/src/stylesheets/lungo.widgets.form.styl
+++ b/src/stylesheets/lungo.widgets.form.styl
@@ -20,7 +20,7 @@ form, .form
     margin-bottom: 8px
     font-size: FONT_SIZE_BIG
     &.large
-      font-size: (FONT_SIZE_BIG * 1.2)
+      font-size: FONT_SIZE_LARGE
 
   & input[type="text"], input[type="password"], input[type="date"], input[type="datetime"], input[type="email"], input[type="number"], input[type="search"], input[type="tel"], input[type="time"], input[type="url"], select, textarea, label.select
     display: block
