--- a/src/stylesheets/lungo.widgets.splash.styl
+++ b/src/stylesheets/lungo.widgets.splash.styl
@@ -11,27 +11,21 @@
 
 .splash
   text-align: center
+  padding: (INDENT * 2)
 
-  & > form
-    margin: 24px 32px
-
-  & img
-    max-width: 206px
-    margin: 20% auto 0%
-
-  & h1
-    margin-top: 20%
+  & .logo
+    width: 60%
+    margin: 20% 0 10% 0
     font-size: 2.2em
-    font-weight: bold
 
   & .button
-    margin-top: 10px
+    margin-top: INDENT
+    margin-bottom: INDENT
 
   & .copyright
     position: absolute
     width: 100%
     bottom: 8px
     left: 0px
-    font-size: 0.8em
-    font-style: normal
+    font-size: FONT_SIZE_TINY
     padding: 0px
