Header button with abbr

--- a/src/stylesheets/lungo.widgets.button.styl
+++ b/src/stylesheets/lungo.widgets.button.styl
@@ -25,11 +25,11 @@
     padding: 0 8px
     & > .icon
       font-size: 1.3em
-      display: block
-      float: left
     & .icon + abbr
-      margin-left: 4px
-      float: right
+      position: relative
+      top: -3px
+      left: 1px
+      display: inline
 
   article &
     height: H = 40px
