--- a/src/stylesheets/theme.lungo.styl
+++ b/src/stylesheets/theme.lungo.styl
@@ -48,9 +48,8 @@ body
     &:active
       background-color: THEME
 
-
 /* -------------------------- LAYOUT COLORS -------------------------- */
-section
+body > section
   background-color: DARK
   & > header
     background-color: THEME
@@ -72,7 +71,7 @@ section
       box-shadow 1px 0 2px rgba(0,0,0,0.2)
 
 DARKEST = darken(DARK_darkest, 15%)
-aside
+body > aside
   background-color: DARK_dark
   color: #fff
   & > header, > footer
