--- a/src/stylesheets/lungo.widgets.pull.styl
+++ b/src/stylesheets/lungo.widgets.pull.styl
@@ -9,7 +9,7 @@
 
 @import "constants.styl"
 
-section.show > [data-control="pull"]
+body > section.show > [data-control="pull"]
   position: absolute
   z-index: -1
   top: HEADER_HEIGHT
