--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -57,7 +57,7 @@
 .tag
   display: inline-block
   padding: 0 3px
-  font-size: FONT_SIZE_TINY !important
+  font-size: FONT_SIZE_TINY
   line-height: 1.25em
   height: 1.35em
   text-align: center
