Fix errors in layout

--- a/src/stylesheets/lungo.layout.nav.styl
+++ b/src/stylesheets/lungo.layout.nav.styl
@@ -95,7 +95,7 @@ nav
     top: HEADER_HEIGHT
     visibility: hidden
     z-index: 2
-    width: inherit
+    width: 100%
     text-align: center
 
     transform translateY(-120%)
