--- a/src/stylesheets/lungo.media.tablet.styl
+++ b/src/stylesheets/lungo.media.tablet.styl
@@ -35,7 +35,9 @@
         box-flex (1)
 
       &[data-children]
-        width: 25%
+        width: 320px
+        // width: 25%
+        // max-width: 320px
 
       & [data-view-aside]
         display: none !important
