--- a/src/stylesheets/lungo.widgets.splash.styl
+++ b/src/stylesheets/lungo.widgets.splash.styl
@@ -14,7 +14,7 @@ body > section > article.splash
   padding: (INDENT * 2)
 
   & .logo
-    width: 60%
+    height: 20%
     margin: 20% 0 10% 0
     font-size: 2.2em
 
