--- a/src/stylesheets/lungo.media.phone.styl
+++ b/src/stylesheets/lungo.media.phone.styl
@@ -45,8 +45,13 @@
 
       /* Transition: SLIDE */
       &[data-transition="slide"]
-        transform translateX(100%)
         visibility: visible
+
+        &:first-child
+          transform translateX(0%)
+        &:not(first-child)
+          transform translateX(100%)
+
         &.show
           transform translateX(0%)
         &.hide
