--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -90,10 +90,12 @@ size = 5px
     & > [data-layout=quarter]
       width: 25%
 
+  & > *
+    box-flex(0)
   & > [data-layout=secondary]
-    box-flex(2)
+    box-flex(1)
   & > [data-layout=primary]
-    box-flex(3)
+    box-flex(2)
 
 
 
