Add newlines so the css properties are not takes as if they were selectors.

--- a/src/stylesheets/lungo.base.styl
+++ b/src/stylesheets/lungo.base.styl
@@ -86,9 +86,14 @@ article, aside, details, figcaption, figure, footer, header, hgroup, nav, sectio
   display: block
 
 
-audio, canvas, video display: inline-block *display: inline *zoom: 1
-audio:not([controls]) display: none
-[hidden]  display: none
+audio, canvas, video
+  display: inline-block
+  *display: inline
+  *zoom: 1
+audio:not([controls])
+  display: none
+[hidden]
+  display: none
 
 html
   height: 100%
