New style for .tag

--- a/src/stylesheets/lungo.layout.styl
+++ b/src/stylesheets/lungo.layout.styl
@@ -76,6 +76,8 @@ body
       &.pull
         transition-property transform
         transition-duration TRANSITION_TIME
+    & [data-article].hide
+      display: none
 
   /* ========================================================================= */
   /* ================================ SECTION ================================ */
