--- a/src/stylesheets/lungo.widgets.form.styl
+++ b/src/stylesheets/lungo.widgets.form.styl
@@ -42,7 +42,7 @@ form, .form
 
   & fieldset
     padding: 8px 8px 0 8px
-
+    position: relative
     & label:not(.select)
       float: left
       width: 20%
