--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -161,14 +161,13 @@ size = 5px
 /* ================================  SPLASH  ================================ */
 body > section > article.splash
   text-align: center
-  padding: (INDENT * 2)
+  padding: (INDENT * 2.5)
   & .logo
-    height: 20%
-    margin: 20% 0 10% 0
+    max-width: 192px
+    margin: 20% 0 7.5% 0
     font-size: 2.2em
-  & .button
-    margin-top: INDENT
-    margin-bottom: INDENT
+  & .button, button
+    margin-bottom: (INDENT / 1.5)
   & .copyright
     position: absolute
     width: 100%
