--- a/src/stylesheets/lungo.widgets.styl
+++ b/src/stylesheets/lungo.widgets.styl
@@ -25,6 +25,15 @@
 .margined > *
   margin: INDENT
 
+.margin-top
+  margin-top: INDENT
+.margin-right
+  margin-right: INDENT
+.margin-bottom
+  margin-bottom: INDENT
+.margin-left
+  margin-left: INDENT
+
 :not(.icon)
   &.left
     float: left
@@ -149,7 +158,6 @@ size = 5px
     top: -5px
     left: 1px
     font-size: FONT_SIZE_TINY
-
 
 /* ================================  CAROUSEL  ================================ */
 [data-control=carousel]
